more filled out, mostly green

--- a/src/variant-1.yaml
+++ b/src/variant-1.yaml
@@ -214,7 +214,7 @@ service:
 serviceAccount:
   ## Specifies whether a ServiceAccount should be created
   ##
-  create: false
+  create: true
   ## The name of the ServiceAccount to use.
   ## If not set and create is true, a name is generated using the mariadb.fullname template
   # name:
