--- a/src/values.yaml
+++ b/src/values.yaml
@@ -96,6 +96,8 @@ readinessProbe:
 ## Persist data to a persistent volume
 persistence:
   enabled: true
+  # existingClaim:
+
   ## database data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
