--- a/test/variant-1.snapshot.yaml
+++ b/test/variant-1.snapshot.yaml
@@ -106,6 +106,19 @@ spec:
   storageClassName: "gp2"
 
 ---
+# Source: mysql/templates/serviceaccount.yaml
+
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: release-name-mysql
+  labels:
+    app: release-name-mysql
+    chart: "mysql-1.6.4"
+    release: "release-name"
+    heritage: "Tiller"
+
+---
 # Source: mysql/templates/svc.yaml
 apiVersion: v1
 kind: Service
@@ -233,7 +246,7 @@ spec:
       securityContext:
         fsGroup: 999
         runAsUser: 999
-      serviceAccountName: default
+      serviceAccountName: release-name-mysql
       initContainers:
       - name: "remove-lost-found"
         image: "busybox-something:busyboximagetag"
@@ -429,8 +442,4 @@ spec:
     matchLabels:
       app: release-name-mysql
       release: release-name
-
----
-# Source: mysql/templates/serviceaccount.yaml
-
 
