--- a/test/variant-2.snapshot.yaml
+++ b/test/variant-2.snapshot.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: release-name-mysql-configuration
-  namespace: lbs
+  namespace: test
 data:
   mysql.cnf: |-
     [mysqld]
@@ -20,7 +20,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: release-name-mysql-initialization
-  namespace: lbs
+  namespace: test
 data:
   first-db.sql: |-
     CREATE DATABASE IF NOT EXISTS first DEFAULT CHARACTER SET utf8 DEFAULT COLLATE utf8_general_ci;
@@ -33,7 +33,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: release-name-mysql-test
-  namespace: lbs
+  namespace: test
   labels:
     app: release-name-mysql
     chart: "mysql-1.6.4"
@@ -64,7 +64,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: release-name-mysql
-  namespace: lbs
+  namespace: test
   labels:
     app: release-name-mysql
     chart: "mysql-1.6.4"
@@ -98,7 +98,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: release-name-mysql-test
-  namespace: lbs
+  namespace: test
   labels:
     app: release-name-mysql
     chart: "mysql-1.6.4"
@@ -149,7 +149,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: release-name-mysql
-  namespace: lbs
+  namespace: test
   labels:
     app: release-name-mysql
     chart: "mysql-1.6.4"
@@ -248,16 +248,20 @@ spec:
             memory: 256Mi
           
         env:
+        - name: MYSQL_ALLOW_EMPTY_PASSWORD
+          value: "true"
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: someexistingsecret
               key: mysql-root-password
+              optional: true
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
               name: someexistingsecret
               key: mysql-password
+              optional: true
         - name: MYSQL_USER
           value: "notroot"
         - name: MYSQL_DATABASE
@@ -270,9 +274,8 @@ spec:
         livenessProbe:
           exec:
             command:
-            - sh
-            - -c
-            - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
+            - mysqladmin
+            - ping
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
@@ -281,9 +284,8 @@ spec:
         readinessProbe:
           exec:
             command:
-            - sh
-            - -c
-            - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
+            - mysqladmin
+            - ping
           initialDelaySeconds: 5
           periodSeconds: 10
           timeoutSeconds: 1
@@ -307,16 +309,10 @@ spec:
       - name: metrics
         image: "prom/mysqld-exporter:v0.10.0"
         imagePullPolicy: "IfNotPresent"
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: someexistingsecret
-              key: mysql-root-password
         command:
         - 'sh'
         - '-c'
-        - 'DATA_SOURCE_NAME="root:$MYSQL_ROOT_PASSWORD@(localhost:3306)/" /bin/mysqld_exporter'
+        - 'DATA_SOURCE_NAME="root@(localhost:3306)/" /bin/mysqld_exporter'
         - "# test"
         ports:
         - name: metrics
@@ -365,7 +361,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: release-name-mysql
-  namespace: lbs
+  namespace: test
   labels:
     app: release-name-mysql
     chart: "mysql-1.6.4"
@@ -379,7 +375,7 @@ spec:
       interval: 30s
   namespaceSelector:
     matchNames:
-      - lbs
+      - test
   selector:
     matchLabels:
       app: release-name-mysql
