--- a/test/variant-4.snapshot.yaml
+++ b/test/variant-4.snapshot.yaml
@@ -85,40 +85,6 @@ data:
     }
 
 ---
-# Source: mysql/templates/pvc.yaml
-
-kind: PersistentVolumeClaim
-apiVersion: v1
-metadata:
-  name: release-name-mysql
-  namespace: test
-  labels:
-    app: release-name-mysql
-    chart: "mysql-1.6.4"
-    release: "release-name"
-    heritage: "Tiller"
-spec:
-  accessModes:
-    - "ReadWriteOnce"
-  resources:
-    requests:
-      storage: "8Gi"
-  storageClassName: "gp2"
-
----
-# Source: mysql/templates/serviceaccount.yaml
-
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: release-name-mysql
-  labels:
-    app: release-name-mysql
-    chart: "mysql-1.6.4"
-    release: "release-name"
-    heritage: "Tiller"
-
----
 # Source: mysql/templates/svc.yaml
 apiVersion: v1
 kind: Service
@@ -246,7 +212,7 @@ spec:
       securityContext:
         fsGroup: 999
         runAsUser: 999
-      serviceAccountName: release-name-mysql
+      serviceAccountName: default
       initContainers:
       - name: "remove-lost-found"
         image: "busybox-something:busyboximagetag"
@@ -410,8 +376,7 @@ spec:
         secret:
           secretName: mysql-ssl-certs
       - name: data
-        persistentVolumeClaim:
-          claimName: release-name-mysql
+        emptyDir: {}
       - name: extras
         emptyDir: {}
       
@@ -442,4 +407,12 @@ spec:
     matchLabels:
       app: release-name-mysql
       release: release-name
+
+---
+# Source: mysql/templates/pvc.yaml
+
+
+---
+# Source: mysql/templates/serviceaccount.yaml
+
 
