various changes to variants

--- a/test/variant-3.snapshot.yaml
+++ b/test/variant-3.snapshot.yaml
@@ -82,27 +82,6 @@ data:
   run.sh: |-
 
 ---
-# Source: mysql/templates/pvc.yaml
-
-kind: PersistentVolumeClaim
-apiVersion: v1
-metadata:
-  name: release-name-mysql
-  namespace: test
-  labels:
-    app: release-name-mysql
-    chart: "mysql-1.6.4"
-    release: "release-name"
-    heritage: "Tiller"
-spec:
-  accessModes:
-    - "ReadWriteOnce"
-  resources:
-    requests:
-      storage: "8Gi"
-  storageClassName: ""
-
----
 # Source: mysql/templates/svc.yaml
 apiVersion: v1
 kind: Service
@@ -389,8 +368,7 @@ spec:
         secret:
           secretName: mysql-ssl-certs
       - name: data
-        persistentVolumeClaim:
-          claimName: release-name-mysql
+        emptyDir: {}
       - name: extras
         emptyDir: {}
       
@@ -421,6 +399,10 @@ spec:
     matchLabels:
       app: release-name-mysql
       release: release-name
+
+---
+# Source: mysql/templates/pvc.yaml
+
 
 ---
 # Source: mysql/templates/serviceaccount.yaml
