--- a/src/variant-3.yaml
+++ b/src/variant-3.yaml
@@ -117,7 +117,7 @@ readinessProbe:
 
 ## Persist data to a persistent volume
 persistence:
-  enabled: true
+  enabled: false
   ## database data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -125,7 +125,6 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  storageClass: "-"
   subPath: /whatever
   accessMode: ReadWriteOnce
   size: 8Gi
